# PASSop

./: Cargo.toml  dummy.sh
src/: copy.txt  main.rs  setup.rs  sops.rs
