[package]
name = "passop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
rand = "0.8"
totp-rs = { version = "5.5", features = ["qr"] }
qrcode = "0.12"
console = "0.15"
dirs = "5.0"
